[package]
name = "redis-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.10", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.21"
redis = { version = "0.21.5", features = ["tokio", "tokio-comp"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["full"] }
url = "2.2.2"
