[package]
name = "redis-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "redis-dump"
path = "src/redis_dump/main.rs"

[[bin]]
name = "redis-restore"
path = "src/redis_restore/main.rs"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.10", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.21"
redis = "0.21.5" 
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
url = "2.2.2"
